style.css
/* ... */
figcaption.mobile:before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 0;
	background:linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
	background:-webkit-linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
}

figcaption.not-mobile:before {
	content: '';
	width: 100%;
	height: 100%;
	position: absolute;
	left: 0;
	top: 5em;
	background:linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
	background:-webkit-linear-gradient(transparent 6em, rgba(255,255,255,.5), rgba(255,255,255,1) 9.5em);
}

figure:hover figcaption.not-mobile {
	top: -15em;
}

@media all and (max-width: 59em){
	figure {width: 50%;}
	figcaption.mobile {
		width: 50%;
		max-width: 50%;
		min-width: 50%;
	}
	div.flex-images>a{width: 50%;}
}

@media all and (max-width: 41.8em) {
	figure {
		width: 100%;
		padding: 0;
		margin: 0;
	}
	figcaption.mobile {
		width: 100vw;
		box-shadow: none;
	}
	div.flex-images>a{width: 100%;}
	.preview-link {object-position: top center;}
}

.portrait {
	float: right;
	padding: 1em;
}

@media all and (max-width: 38.125em) {
	.portrait {
		float: none;
		width: 100%;
	}
}

/*============================================*/
/*stylings for footer tag excluding form*/


footer {
	width: 100%;
	background-color: #272735;
	color: #ffffff;
	overflow: auto;
	padding: .7em .7em 0 .7em;
	border-top: .35em double #9fa7b5;
}

footer form {
	width: 90%;
	padding: 0 .5em .5em .5em;
}

.footer-section {
	width: 40%;
	float: left;
}

.footer-section:first-child {
	width: 60%;
}

.footer-section:last-child {width: 100%; clear: both;}

.little-bio {
	display: flex;
	min-height: 55%;
	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
}

#social-footer>ul li {
	font-size: 2em;
	padding: .3em;
	display: block;
	transition: all .1s ease-in-out;
}

#social-footer>ul li:hover {
	transform: scale(1.3) translate(-.2em, 0);
}

#social-footer>ul li:active {
	transform: scale(1.5) translate(-.2em, 0);
	color: #89c2ff;
}

#social-footer>ul a:active {color: #89c2ff}

#social-footer ul {
	display: flex;
	flex-flow: column nowrap;
	justify-content: space-around;
	list-style: none;
}

#footer-bio {
	max-width:80%;
	text-align: center;
	padding-bottom: 1.3em;
}

#copyright {float: left; font-size: 1.2em; padding: 0 0.2em; margin-top: -.2em; font-family:'Amaranth', sans-serif;}
#company-logo {max-width: 12.6em; float: left;}

@media all and (max-width: 59em){
	.little-bio {
	  flex-flow: column-reverse nowrap;
		justify-content: center;
		align-content: center;
	}
	
	#social-footer ul {
		flex-flow: row nowrap;
		margin-bottom: 1em;
	}
	
	#social-footer>ul li {padding: 0 .3em;}
	
	#social-footer>ul li:hover {
		transform: scale(1.3) translate(0, -.3em);
	}
	
	#social-footer>ul li:active {
		transform: scale(1.5) translate(0, -.3em);
	}	
}

@media all and (max-width: 47.45em) {
	.footer-section, .footer-section:first-child {
		width: 100%;
	}
	
	.footer-section>form {
		margin: auto;
	}
	
	.little-bio {
		min-height: auto;
		height: auto;
	}

}

/*============================================*/
/*stylings for the footer's form*/

input {
	display: block;
	border-right: .35em double #9fa7b5;
	border-left: .35em double #9fa7b5;
	border-top: .1em solid #9fa7b5;
	border-bottom: .1em solid #9fa7b5;
	width: 85%;
	font-size: 1.1em;
	padding: .1em;
	float: right;
}

input:first-of-type {
	border-top: .35em double #9fa7b5;
	border-radius: .3em .3em 0 0;}
input:last-of-type {
	border-radius: 0 0 0.3em .3em;
	border-bottom: .35em double #9fa7b5;
}

label {
	width: 15%; 
	float: left; 
	font-size: 1.1em;
	text-align: left;
	padding: .25em;
}

textarea {
	width: 100%; max-width: 100%; 
	height: 20em; max-height: 20em;
	border-radius: .3em;
	border: .35em double #9fa7b5;
	resize: none;
	font-size: 1.1em;
	text-align: left;
}

button {
	float: right; 
	text-align: center;
	margin: .3em 0;
	width: 3.2em;
	max-width: 3.2em;
	min-width: 3.2em;
	height: 2em;
	max-height: 2em;
	min-height: 2em;
	border-radius: .35em;
	font-size: 1.15em;
	background-color: #ffffff;
	border: .2em double #9fa7b5;
	color: #48494c;
	transition: font-size .1s ease-in-out;
	cursor: pointer;
}

button:hover {
	font-size: 1.25em;
}

button:active {
	font-size: 1.25em;
	color: #89c2ff;
}

@media all and (max-width: 24.5em) {
	input {width: 80%;}
}

@media all and (max-width: 19.7em) {
	input {width: 75%;}
}

/*============================================*/
/*stylings for fonts*/

p, button, form, input, div, textarea {
	font-family: 'Balthazar', serif;
}

h1, h2, h3, h4, button {
	font-family: 'Amaranth', sans-serif;
}

nav>ul{
	font-weight: bolder;
	font-family: 'Handlee', cursive;
}

